Fix mobile-compatible bugs: overflow (to the right of big pictures on small screen), color of the hyper-link to ORANGE (better recognized).

--- a/assets/css/nuosc_bootstrap.css
+++ b/assets/css/nuosc_bootstrap.css
@@ -44,6 +44,7 @@ template {
 }
 a {
   background: transparent;
+  color:orange!important;
 }
 a:active,
 a:hover {
